redact-engine/src/snapshots/redact_engine__pattern__test_pattern__can_redact_multiple_patterns.snap
---
source: redact-engine/src/pattern.rs
expression: "redaction.redact_patterns(TEXT, false)"
---
Info {
    string: "[TEXT_REDACTED],[TEXT_REDACTED],baz,foo",
    captures: [
        Captures {
            text: "bar",
            test: "(bar)",
            position: None,
        },
        Captures {
            text: "foo",
            test: "(baz),(foo)",
            position: None,
        },
    ],
}
