redact-engine/src/snapshots/redact_engine__pattern__test_pattern__can_redact_patterns.snap
---
source: redact-engine/src/pattern.rs
expression: "redaction.redact_patterns(TEXT, false)"
---
Info {
    string: "foo,[TEXT_REDACTED],baz,foo",
    captures: [
        Captures {
            text: "bar",
            position: None,
        },
    ],
}
