redact-engine/src/snapshots/redact_engine__pattern__test_pattern__can_redact_patterns_empty_string.snap
---
source: redact-engine/src/pattern.rs
expression: "redaction.redact_patterns(\"CARGO_PKG_DESCRIPTION=\", false)"
---
Info {
    string: "CARGO_PKG_DESCRIPTION=",
    captures: [],
}
