redact-engine/src/snapshots/redact_engine__pattern__test_pattern__can_redact_patterns_with_info.snap
---
source: redact-engine/src/pattern.rs
expression: "redaction.redact_patterns(TEXT, true)"
---
Info {
    string: "foo,[TEXT_REDACTED],baz,foo",
    captures: [
        Captures {
            text: "bar",
            test: "(bar)",
            position: Some(
                Position {
                    line: 1,
                    start_offset: 4,
                    end_offset: 7,
                },
            ),
        },
    ],
}
