redact-engine/src/snapshots/redact_engine__pattern__test_pattern__can_try_capture.snap
---
source: redact-engine/src/pattern.rs
expression: "Redact::try_capture(TEXT, &Regex::new(\"(foo)\").unwrap(), 1, false)"
---
[
    (
        "foo",
        None,
    ),
    (
        "foo",
        None,
    ),
]
