redact-engine/src/snapshots/redact_engine__pattern__test_pattern__can_try_capture_with_info.snap
---
source: redact-engine/src/pattern.rs
expression: "Redact::try_capture(text, &Regex::new(\"(foo)\").unwrap(), 1, true)"
---
[
    (
        "foo",
        Some(
            Position {
                line: 2,
                start_offset: 12,
                end_offset: 15,
            },
        ),
    ),
    (
        "foo",
        Some(
            Position {
                line: 4,
                start_offset: 36,
                end_offset: 39,
            },
        ),
    ),
]
